# ai-reviewer

./: Dockerfile  LICENSE  README.md  action.yml  pyproject.toml
.gitea/scripts/: code_review.py  model.py
.gitea/workflows/: code-review.yml
